--- a/src/app/layout/grn/grn.component.html
+++ b/src/app/layout/grn/grn.component.html
@@ -59,10 +59,10 @@
               <th scope="row">{{i +1}}</th>
               <td>{{grn.grn_map[0].grn_no}}</td>
               <td>{{grn.purchase_order_no[0].purchase_order_no}}</td>
-              <td>{{grn.company}}</td>
-              <td>{{grn.pur_org}}</td>
-              <td>{{grn.pur_grp}}</td>
-              <td>{{grn.vendor}}</td>
+              <td>{{grn.company.company_name}}</td>
+              <td>{{grn.pur_org.name}}</td>
+              <td>{{grn.pur_grp.name}}</td>
+              <td>{{grn.vendor.vendor_fullname}}</td>
               <td>{{grn.vendor_address.address}}</td>
               <td>{{grn.created_at | date:'dd-MM-yyyy'}}</td>
               <td>
