--- a/src/app/layout/purchase-invoice/purchase-invoice.component.html
+++ b/src/app/layout/purchase-invoice/purchase-invoice.component.html
@@ -1,65 +1,104 @@
 <div>
-    <app-page-header [heading]="'Purchase Invoice List'" [icon]="'fa fa-university'"></app-page-header>
-    <div>
-      <div class="col-md-6 offset-md-6 pull-right" style="text-align: right">
-          <button type="button" class="btn btn-secondary"><i class="fa fa-question" aria-hidden="true"></i> Help</button>
-          <button type="button" class="btn btn-secondary"><i class="fa fa-refresh"></i> Reload</button>
-          <button type="button" class="btn btn-success" (click)="btnClickNav('purchase-invoice/add')"><i class="fa fa-plus"></i> New Purchase Invoice</button>
-      </div>
-      <div class="clearfix"></div>
+  <!-- <app-page-header [heading]="'Purchase Invoice List'" [icon]="'fa fa-university'"></app-page-header> -->
+  <div class="row">
+    <div class="col-md-6">
+      <h4 class="page-header">Purchase Invoice List</h4>
     </div>
-      
-    <hr/>
-    <div class="row">
-      <div class="col-md-12">
+    <div class="col-md-6 pull-right" style="text-align: right">
+      <button type="button" class="btn btn-secondary">
+        <i class="fa fa-question" aria-hidden="true"></i> Help</button>
+      <button type="button" class="btn btn-secondary">
+        <i class="fa fa-refresh"></i> Reload</button>
+      <button type="button" class="btn btn-success" (click)="btnClickNav('purchase-invoice/add')">
+        <i class="fa fa-plus"></i> New Purchase Invoice</button>
+    </div>
+    <div class="clearfix"></div>
+  </div>
+
+  <hr/>
+  <div class="row">
+    <div class="col-md-12">
       <div class="card">
-        <div class="card-header">Purchase Invoice</div>
+        <div class="card-header">
+            <div class="row">
+                <div class="col-md-9">
+                  <h5>Purchase Invoice</h5>
+                </div>
+                <div class="col-md-3">
+                  <form role="form" (ngSubmit)="dataSearch()">
+                    <div class="input-group">
+                      <input type="text" class="form-control" name="search" placeholder="Search" [(ngModel)]="search_key">
+                      <div class="input-group-append">
+                        <button class="btn btn-secondary" type="submit">
+                          <i class="fa fa-search"></i>
+                        </button>
+                      </div>
+                    </div>
+                  </form>
+                </div>
+              </div>
+        </div>
         <table class="card-body table table-hover table-sm table-bordered">
-            <thead>
+          <thead>
             <tr>
-                <th>Sl.No.</th>
-                <th>Company</th>
-                <th>PO INV No</th>
-                <th>Grn No</th>
-                <th>PO No</th>
-                <th>Goods Recd ON</th>
-                <th>Goods Received BY</th>
-                <th>Status</th>
-                <th>Apporve</th>
-                <th>Action</th>
+              <th>Sl.No.</th>
+              <th>Company</th>
+              <th>PO INV No</th>
+              <th>Grn No</th>
+              <th>PO No</th>
+              <th>Goods Recd ON</th>
+              <th>Goods Received BY</th>
+              <th>Status</th>
+              <th>Apporve</th>
+              <th>Action</th>
             </tr>
-            </thead>
-            <tbody>
-            <tr>
-                <th scope="row">1</th>
-                <td>Shyam Futuretech</td>
-                <td>0/05/POINV-0015</td>
-                <td>17-18/02/GRN-0002</td>
-                <td>17-18/02/PO-0003</td>
-                <td>02-05-2018</td>
-                <td>admin</td>
-                <td>
-                  <select class="form-control">
-                    <option>Change Status</option>
-                    <option>Cancel</option>
-                    <option>Active</option>
-                  </select>
-                </td>
-                <td>
-                  <select class="form-control">
-                    <option>Change Approve</option>
-                    <option>Approve</option>
-                    <option>Dis-Approve</option>
-                  </select>
-                </td>
-                <td>
-                  <a href="javascript:void(0);" title="Edit" name="Edit"><i class="fa fa-eye"></i></a>
-                </td>
+          </thead>
+          <tbody>
+            <tr *ngFor="let pInvoice of purchaseInvoiceList ; let i = index">
+              <th scope="row">{{i + 1}}</th>
+              <td>{{pInvoice.company.company_name}}</td>
+              <td>{{pInvoice.pur_invoice_map[0].purchase_inv_no}}</td>
+              <td>{{pInvoice.grn_number[0].grn_no}}</td>
+              <td>{{pInvoice.po_order_no[0].purchase_order_no}}</td>
+              <td>{{pInvoice.grn.created_at | date:'dd-MM-yyyy'}}</td>
+              <td>{{pInvoice.grn.created_by.first_name}}</td>
+              <td>
+                <a href="javascript:void(0);" title="Active" name="Active" (click)="inactiveState(pInvoice.id)" *ngIf="pInvoice.status==true">
+                    <i class="fa fa-thumbs-up"></i> Active</a>
+                  <a href="javascript:void(0);" title="Inactive" name="Inactive" (click)="activeState(pInvoice.id)" *ngIf="pInvoice.status==false">
+                    <i class="fa fa-thumbs-down"></i> Inactive</a>
+              </td>
+              <td>
+                <a href="javascript:void(0);" title="Active" name="Active" (click)="disApprovePurchaseInvoice(pInvoice.id)" *ngIf="pInvoice.is_approve==1">
+                    <i class="fa fa-thumbs-up"></i> Approve</a>
+                  <a href="javascript:void(0);" title="Inactive" name="Inactive" (click)="approvePurchaseInvoice(pInvoice.id)" *ngIf="pInvoice.is_approve==0">
+                    <i class="fa fa-thumbs-down"></i> Dis-approve</a>
+              </td>
+              <td>
+                <a href="javascript:void(0);" title="Edit" name="Edit">
+                  <i class="fa fa-eye"></i>
+                </a>
+              </td>
             </tr>
-            </tbody>
+            <tr *ngIf="purchaseInvoiceList.length == 0">
+                <td colspan="12" class="text-center">No record found</td>
+              </tr>
+          </tbody>
         </table>
       </div>
     </div>
-    </div>
   </div>
-  
+  <div class="row" *ngIf="totalurchaseInvoiceList > 10">
+      <div class="col-md-12">
+        <div class="card-body pull-right">
+          <ngb-pagination [collectionSize]="totalurchaseInvoiceList" [(page)]="defaultPagination" (pageChange)="pagination()" size="sm"></ngb-pagination>
+        </div>
+      </div>
+    </div>
+</div>
+<ngx-spinner
+bdColor = "rgba(0, 0, 0, 0.8)"
+size = "default"
+color = "#fff"
+type = "ball-spin"
+></ngx-spinner>
