--- a/src/app/layout/material/material-edit/material-edit.component.html
+++ b/src/app/layout/material/material-edit/material-edit.component.html
@@ -49,41 +49,41 @@
                                     </div>
     
                                     <div class="form-group col-md-12" formArrayName="material_uom">
-                                        <div *ngFor="let material_uoms of form.controls['material_uom'].controls; let i = index;">
+                                        <div *ngFor="let material_uoms of getMaterialUom(form); let i = index;">
                                             <div class="row" [formGroupName]="i">
                                                 <div class="form-group col-md-4">
                                                     <label>Unit of Measurement</label>
                                                     <select class="form-control" formControlName="base_uom" [ngClass]="{
-                                                        'is-invalid': form.controls['material_uom'].controls[i].controls['base_uom'].invalid && (form.controls['material_uom'].controls[i].controls['base_uom'].dirty || form.controls['material_uom'].controls[i].controls['base_uom'].touched),
-                                                        'is-valid': form.controls['material_uom'].controls[i].controls['base_uom'].valid && (form.controls['material_uom'].controls[i].controls['base_uom'].dirty || form.controls['material_uom'].controls[i].controls['base_uom'].touched)
+                                                        'is-invalid': material_uoms.get('base_uom').invalid && (material_uoms.get('base_uom').dirty || material_uoms.get('base_uom').touched),
+                                                        'is-valid': material_uoms.get('base_uom').valid && (material_uoms.get('base_uom').dirty || material_uoms.get('base_uom').touched)
                                                       }"  [(ngModel)]="material.material_uom[i].base_uom" name="base_uom">
                                                         <option value="0">Select UOM</option>
                                                         <option *ngFor="let uom of UOMList;" value="{{uom.id}}">{{uom.name}}</option>
                                                     </select>
-                                                    <div class="invalid-feedback" *ngIf="form.controls['material_uom'].controls[i].controls['base_uom'].hasError('required')">
+                                                    <div class="invalid-feedback" *ngIf="material_uoms.get('base_uom').hasError('required')">
                                                         Please enter unit of Measurement
                                                     </div>
                                                 </div>
                                                 <div class="form-group col-md-4">
                                                     <label>Unit Per UOM</label>
                                                     <input class="form-control" type="number" formControlName="unit_per_uom" placeholder="Material Name" [ngClass]="{
-                                                        'is-invalid': form.controls['material_uom'].controls[i].controls['unit_per_uom'].invalid && (form.controls['material_uom'].controls[i].controls['unit_per_uom'].dirty || form.controls['material_uom'].controls[i].controls['unit_per_uom'].touched),
-                                                        'is-valid': form.controls['material_uom'].controls[i].controls['unit_per_uom'].valid && (form.controls['material_uom'].controls[i].controls['unit_per_uom'].dirty || form.controls['material_uom'].controls[i].controls['unit_per_uom'].touched)
+                                                        'is-invalid': material_uoms.get('unit_per_uom').invalid && (material_uoms.get('unit_per_uom').dirty || material_uoms.get('unit_per_uom').touched),
+                                                        'is-valid': material_uoms.get('unit_per_uom').valid && (material_uoms.get('unit_per_uom').dirty || material_uoms.get('unit_per_uom').touched)
                                                       }"  [(ngModel)]="material.material_uom[i].unit_per_uom" name="unit_per_uom">
-                                                    <div class="invalid-feedback" *ngIf="form.controls['material_uom'].controls[i].controls['unit_per_uom'].hasError('required')">
+                                                    <div class="invalid-feedback" *ngIf="material_uoms.get('unit_per_uom').hasError('required')">
                                                         Please enter unit per UOM
                                                     </div>
                                                 </div>
                                                 <div class="form-group col-md-4">
                                                     <label>UOM</label>
                                                     <select class="form-control" formControlName="unit_uom" [ngClass]="{
-                                                        'is-invalid': form.controls['material_uom'].controls[i].controls['unit_uom'].invalid && (form.controls['material_uom'].controls[i].controls['unit_uom'].dirty || form.controls['material_uom'].controls[i].controls['unit_uom'].touched),
-                                                        'is-valid': form.controls['material_uom'].controls[i].controls['unit_uom'].valid && (form.controls['material_uom'].controls[i].controls['unit_uom'].dirty || form.controls['material_uom'].controls[i].controls['unit_uom'].touched)
+                                                        'is-invalid': material_uoms.get('unit_uom').invalid && (material_uoms.get('unit_uom').dirty || material_uoms.get('unit_uom').touched),
+                                                        'is-valid': material_uoms.get('unit_uom').valid && (material_uoms.get('unit_uom').dirty || material_uoms.get('unit_uom').touched)
                                                       }" [(ngModel)]="material.material_uom[i].unit_uom" name="unit_uom">
                                                         <option value="0">Select UOM</option>
                                                         <option *ngFor="let uom of UOMList;" value="{{uom.id}}">{{uom.name}}</option>
                                                     </select>
-                                                    <div class="invalid-feedback" *ngIf="form.controls['material_uom'].controls[i].controls['unit_uom'].hasError('required')">
+                                                    <div class="invalid-feedback" *ngIf="material_uoms.get('unit_uom').hasError('required')">
                                                         Please enter select UOM
                                                     </div>
                                                 </div>
@@ -107,45 +107,45 @@
                                     </div>
                                     <div class="form-group col-md-12" *ngIf="is_taxable_value==true">
                                         <div class="row">
-                                            <div class="form-group col-md-12" formArrayName="material_tax" *ngFor="let material_taxs of form.controls['material_tax'].controls; let i = index;">
+                                            <div class="form-group col-md-12" formArrayName="material_tax" *ngFor="let material_taxs of getMateriaTax(form); let i = index;">
                                                 <div class="row" [formGroupName]="i">
                                                     <div class="form-group col-md-3">
                                                         <label>IGST</label>
                                                         <input class="form-control" type="number" formControlName="igst" placeholder="IGST" [ngClass]="{
-                                                    'is-invalid': form.controls['material_tax'].controls[i].controls['igst'].invalid && (form.controls['material_tax'].controls[i].controls['igst'].dirty || form.controls['material_tax'].controls[i].controls['igst'].touched),
-                                                    'is-valid': form.controls['material_tax'].controls[i].controls['igst'].valid && (form.controls['material_tax'].controls[i].controls['igst'].dirty || form.controls['material_tax'].controls[i].controls['igst'].touched)
-                                                  }" [(ngModel)]="material.material_tax[i].igst" name="igst">
-                                                        <div class="invalid-feedback" *ngIf="form.controls['material_tax'].controls[i].controls['igst'].hasError('required')">
+                                                            'is-invalid':material_taxs.get('igst').invalid && (material_taxs.get('igst').dirty || material_taxs.get('igst').touched),
+                                                            'is-valid': material_taxs.get('igst').valid && (fmaterial_taxs.get('igst').dirty || material_taxs.get('igst').touched)
+                                                          }" [(ngModel)]="material.material_tax[i].igst" name="igst">
+                                                        <div class="invalid-feedback" *ngIf=" material_taxs.get('igst').hasError('required')">
                                                             Please enter IGST
                                                         </div>
                                                     </div>
                                                     <div class="form-group col-md-3">
                                                         <label>CGST</label>
                                                         <input class="form-control" type="number" formControlName="cgst" placeholder="CGST" [ngClass]="{
-                                                    'is-invalid': form.controls['material_tax'].controls[i].controls['cgst'].invalid && (form.controls['material_tax'].controls[i].controls['cgst'].dirty || form.controls['material_tax'].controls[i].controls['cgst'].touched),
-                                                    'is-valid': form.controls['material_tax'].controls[i].controls['cgst'].valid && (form.controls['material_tax'].controls[i].controls['cgst'].dirty || form.controls['material_tax'].controls[i].controls['cgst'].touched)
-                                                  }" [(ngModel)]="material.material_tax[i].cgst" name="cgst">
-                                                        <div class="invalid-feedback" *ngIf="form.controls['material_tax'].controls[i].controls['cgst'].hasError('required')">
+                                                            'is-invalid': material_taxs.get('cgst').invalid && (material_taxs.get('cgst').dirty || material_taxs.get('cgst').touched),
+                                                            'is-valid': material_taxs.get('cgst').valid && (material_taxs.get('cgst').dirty || material_taxs.get('cgst').touched)
+                                                          }" [(ngModel)]="material.material_tax[i].cgst" name="cgst">
+                                                        <div class="invalid-feedback" *ngIf="material_taxs.get('cgst').hasError('required')">
                                                             Please enter CGST
                                                         </div>
                                                     </div>
                                                     <div class="form-group col-md-3">
                                                         <label>SGST</label>
                                                         <input class="form-control" type="number" formControlName="sgst" placeholder="SGST" [ngClass]="{
-                                                    'is-invalid': form.controls['material_tax'].controls[i].controls['sgst'].invalid && (form.controls['material_tax'].controls[i].controls['sgst'].dirty || form.controls['material_tax'].controls[i].controls['sgst'].touched),
-                                                    'is-valid': form.controls['material_tax'].controls[i].controls['sgst'].valid && (form.controls['material_tax'].controls[i].controls['sgst'].dirty || form.controls['material_tax'].controls[i].controls['sgst'].touched)
-                                                  }" [(ngModel)]="material.material_tax[i].sgst" name="sgst">
-                                                        <div class="invalid-feedback" *ngIf="form.controls['material_tax'].controls[i].controls['sgst'].hasError('required')">
+                                                            'is-invalid': material_taxs.get('sgst').invalid && (material_taxs.get('sgst').dirty || material_taxs.get('sgst').touched),
+                                                            'is-valid': material_taxs.get('sgst').valid && (material_taxs.get('sgst').dirty || material_taxs.get('sgst').touched)
+                                                          }" [(ngModel)]="material.material_tax[i].sgst" name="sgst">
+                                                        <div class="invalid-feedback" *ngIf="material_taxs.get('sgst').hasError('required')">
                                                             Please enter SGST
                                                         </div>
                                                     </div>
                                                     <div class="form-group col-md-3">
                                                         <label>HSN</label>
                                                         <input class="form-control" type="text" formControlName="hsn" placeholder="HSN" [ngClass]="{
-                                                    'is-invalid': form.controls['material_tax'].controls[i].controls['hsn'].invalid && (form.controls['material_tax'].controls[i].controls['hsn'].dirty || form.controls['material_tax'].controls[i].controls['hsn'].touched),
-                                                    'is-valid': form.controls['material_tax'].controls[i].controls['hsn'].valid && (form.controls['material_tax'].controls[i].controls['hsn'].dirty || form.controls['material_tax'].controls[i].controls['hsn'].touched)
-                                                  }" [(ngModel)]="material.material_tax[i].hsn" name="hsn">
-                                                        <div class="invalid-feedback" *ngIf="form.controls['material_tax'].controls[i].controls['hsn'].hasError('required')">
+                                                            'is-invalid': material_taxs.get('hsn').invalid && (material_taxs.get('hsn').dirty || material_taxs.get('hsn').touched),
+                                                            'is-valid': material_taxs.get('hsn').valid && (material_taxs.get('hsn').dirty || material_taxs.get('hsn').touched)
+                                                          }" [(ngModel)]="material.material_tax[i].hsn" name="hsn">
+                                                        <div class="invalid-feedback" *ngIf=" material_taxs.get('hsn').hasError('required')">
                                                             Please enter HSN
                                                         </div>
                                                     </div>
