landing page done

--- a/src/app/layout/landing-page/landing-page.component.html
+++ b/src/app/layout/landing-page/landing-page.component.html
@@ -1,3 +1,14 @@
-<p>
-  landing-page works!
-</p>
+<div>
+  <!-- <app-page-header [heading]="'Company Hierarchy'" [icon]="'fa fa-university'"></app-page-header> -->
+  <div class="row">
+    <div class="col-md-6">
+      <h4 class="page-header">Welcome to Shyam Steel Industries Limited</h4>
+    </div>
+    <div class="col-md-6 pull-right" style="text-align: right">
+      
+    </div>
+    <div class="clearfix"></div>
+  </div>
+  <hr/>
+
+</div>
