--- a/src/app/layout/company/company-tree/company-tree.component.html
+++ b/src/app/layout/company/company-tree/company-tree.component.html
@@ -1,11 +1,17 @@
-<div>
-  <div class="col-md-6 offset-md-6 pull-right" style="text-align: right">
-     <button type="button" class="btn btn-secondary"><i class="fa fa-question" aria-hidden="true"></i> Help</button>
-     <button type="button" class="btn btn-secondary"><i class="fa fa-refresh"></i> Reload</button>
-     <button type="button" class="btn btn-success" (click)="btnClickNav('company/add')"><i class="fa fa-plus"></i> New Company</button>
+<div class="row">
+    <div class="col-md-6">
+      <h4 class="page-header">Company Hierarchy</h4>
+    </div>
+    <div class="col-md-6 pull-right" style="text-align: right">
+      <button type="button" class="btn btn-secondary">
+        <i class="fa fa-question" aria-hidden="true"></i> Help</button>
+      <button type="button" class="btn btn-secondary">
+        <i class="fa fa-refresh"></i> Reload</button>
+      <button type="button" class="btn btn-success" (click)="btnClickNav('company/add')">
+        <i class="fa fa-plus"></i> New Company</button>
+    </div>
+    <div class="clearfix"></div>
   </div>
-  <div class="clearfix"></div>
-</div>
 
 <hr/>
 <div style="text-align: center">
