--- a/src/app/layout/purchase-orders/purchase-orders-add/purchase-orders-add.component.html
+++ b/src/app/layout/purchase-orders/purchase-orders-add/purchase-orders-add.component.html
@@ -150,7 +150,7 @@
                             <div class="card bg-light mb-3" *ngIf="visible_key">
                                 <div class="card-header">Freight Details</div>
                                 <div class="card-body">
-                                    <div class="row" formArrayName="purchase_order_freight" *ngFor="let freight of form.get('purchase_order_freight').controls; let i = index;">
+                                    <div class="row" formArrayName="purchase_order_freight" *ngFor="let freight of getPurchaseOrderFreight(form); let i = index;">
                                         <div [formGroupName]="i" class="col-md-12">
                                             <div class="row">
                                                 <!-- <div class="form-group col-md-2">
