--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,29 +1,32 @@
 <div class="login-page" [@routerTransition]>
     <div class="row justify-content-md-center">
         <div class="col-md-4">
-            <!-- <img src="assets/images/logo.jpg" width="150px" class="user-avatar" /> -->
-            <img src="assets/images/logo.jpg"  />
-            <h1>ERP System Admin</h1>
-            <form role="form" [formGroup]="form">
-                <div class="form-content">
-                    <div class="form-group">
-                        <input type="text" name="username" class="form-control input-underline input-lg" placeholder="User Name" formControlName="username" [ngClass]="displayFieldCss('username')">
-                        <div class="invalid-feedback text-left" *ngIf="isFieldValid('username')">
+            <div class="login-form">
+                <!-- <img src="assets/images/logo.jpg" width="150px" class="user-avatar" /> -->
+                <img src="assets/images/logo.jpg" />
+                <h1>ERP System Admin</h1>
+                <form role="form" [formGroup]="form">
+                    <div class="form-content">
+                        <div class="form-group">
+                            <label>User Name</label>
+                            <input type="text" name="username" class="form-control input-underline input-lg" placeholder="User Name" formControlName="username" [ngClass]="displayFieldCss('username')">
+                            <div class="invalid-feedback text-left" *ngIf="isFieldValid('username')">
                                 Please enter user name
                             </div>
-                    </div>
+                        </div>
 
-                    <div class="form-group">
-                     <input type="password" name="password"  class="form-control input-underline input-lg"  placeholder="Password" formControlName="password" [ngClass]="displayFieldCss('password')">
-                     <div class="invalid-feedback text-left" *ngIf="isFieldValid('password')">
-                            Please enter password
+                        <div class="form-group">
+                            <label>Password</label>
+                            <input type="password" name="password" class="form-control input-underline input-lg" placeholder="Password" formControlName="password" [ngClass]="displayFieldCss('password')">
+                            <div class="invalid-feedback text-left" *ngIf="isFieldValid('password')">
+                                Please enter password
+                            </div>
                         </div>
                     </div>
-                </div>
-                <a class="btn rounded-btn" href="javascript:void(0);" (click)="onLoggedin()"> Log in </a>
-                &nbsp;
-                <!-- <a class="btn rounded-btn" [routerLink]="['/signup']">Register</a> -->
-            </form>
+                    <a class="btn rounded-btn" href="javascript:void(0);" (click)="onLoggedin()"> Log in </a> &nbsp;
+                    <!-- <a class="btn rounded-btn" [routerLink]="['/signup']">Register</a> -->
+                </form>
+            </div>
         </div>
     </div>
 </div>
