purchase invoice add done

--- a/src/app/layout/purchase-invoice/purchase-invoice.component.html
+++ b/src/app/layout/purchase-invoice/purchase-invoice.component.html
@@ -75,7 +75,7 @@
                     <i class="fa fa-thumbs-down"></i> Dis-approve</a>
               </td>
               <td>
-                <a href="javascript:void(0);" title="Edit" name="Edit">
+                <a href="javascript:void(0);" title="View" name="View">
                   <i class="fa fa-eye"></i>
                 </a>
               </td>
